force-app/main/default/objects/Manager_Team_Member__c/Manager_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Links Recruiter Managers to their team members (Account Managers, Sales Managers, or other future roles)</description>
    <label>Manage Team Member</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Manage Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>