force-app/main/default/objects/Manager_Team_Member__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default = True. Uncheck to deactivate instead of deleting.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>