force-app/main/default/objects/Manager_Team_Member__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <description>Auto-populated in before-save Flow as {Recruiter_ManagerId}_{ManagerId}. Prevents duplicates.</description>
    <label>Assignment Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>