force-app/main/default/objects/Manager_Team_Member__c/fields/Last_Claimed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Claimed_At__c</fullName>
    <description>Auto-set when record is created or re-activated.</description>
    <label>Last Claimed At</label>
    <type>DateTime</type>
</CustomField>