force-app/main/default/objects/Manager_Team_Member__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Generic manager — can be AM or SM. Lookup filter to restrict based on Role/Profile (Account Manager / Sales Manager).</description>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Member</relationshipName>
    <type>Lookup</type>
</CustomField>