force-app/main/default/objects/Manager_Team_Member__c/fields/Recruiter_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the RM who claims an AM</description>
    <label>Borrowed Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>