force-app/main/default/objects/Manager_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Defines what type of Manager the Recruiter Manager is assigned to (e.g., Account Manager, Sales Manager)</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Recruiting Leader</fullName>
            </value>
            <value>
                <fullName>Recruiting Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>