force-app/main/default/objects/Manager_Team_Member__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
                <default>true</default>
                <label>Automated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>